--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+.tomato {
+  color: tomato;
+}
+
+.white {
+  color: whitesmoke;
+}
